@@ -1,3 +1,13 @@
 plugins {
     id 'java'
 }
+println System.properties['java.home']
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs += ["-proc:none",
+                             "--add-modules", "jdk.compiler",
+                             "--add-exports", "jdk.compiler/com.sun.tools.javac.api=austras_engine",
+                             "--add-exports", "jdk.compiler/com.sun.tools.javac.tree=austras_engine",
+                             "--add-exports", "jdk.compiler/com.sun.tools.javac.util=austras_engine",
+    ]
+}
